css/admin.css
/* $Id: admin.css,v 1.34 2008-05-05 19:07:28 merlinofchaos Exp $ */

/*
 * Summary pad
 */
.views-tabset {
  border-top: #ccc 1px solid;
  margin-top: 0.5em;
}

.views-tabset .views-tab fieldset {
  margin-top: 0;
}

/*
 * First column: display drawers
 */
.views-tabset .views-tabs {
  background: #efefef;
  float: left;
  width: 118px;
  margin-right: 0;
  padding-bottom: 1em;
  border-left: #ccc 1px solid;
  border-bottom: #ccc 1px solid;
}

* html .views-tabset .views-tabs {
  width: 114px;
  position: relative;
  left: 4px;
}

.views-tabset .views-tabs ul {
  list-style-type: none !important;
  list-style-image: none !important;
  padding: 0;
  margin: 0;
  position: relative;
}

.views-tabset .views-tabs ul li {
  list-style-type: none;
  list-style-image: none;
  line-height: 100%;
  border-bottom: #ADB7BE 1px solid;
  background: #e6e6e6;
  margin: 0;
  padding: 0.5em;
  position: relative;
}

.views-tabset .views-tabs ul li.active {
  background: #fff;
  border-bottom: #ADB7BE 3px solid;
  border-right: 0;
  margin-left: 0;
  position: relative;
}

.views-tabset .views-tabs ul li a {
  font-size: 90%;
  color: #777;
  font-weight: normal;
}

.views-tabset .views-tabs ul li.active a {
  font-weight: bold;
}

.views-tabset .extra {
  text-align: center;
  margin-right: 0;
}

.views-tabset .extra input {
  margin-top: 0;
  margin-right: 0;
}

/*
 * Three columns with setting-summaries
 */
.views-tabset .views-display {
  border: #ccc 1px solid;
  border-top: 0;
  margin-left: 117px; /* 118 -1 causes borders to overlap */
//  min-height: 302px;
//  _height: 300px;  /*stupid IE hack */
}

* html .views-tabset .views-display {
  margin-left: 114px;
}

div.views-display-deleted,
div.views-display-deleted div.top,
div.views-display-deleted div.tab-section {
  background-color: #eee;
}

.views-display {
  background: #fff;
}

.views-display div {
  font-size: 8pt;
  line-height: 12pt;
}

.views-display .top {
  padding: 0.5em 0em 0em 1em;
  background: #fff;
}

.views-display .top .display-title {
  font-weight: bold;
}
.views-display .top .display-description {
  margin-left: 1em;
  font-style: italic;
  overflow: hide;
  white-space: nowrap;
  font-size: 90%;
}

.views-display .tab-section {
  width: 32.5%;
  padding: 0;
  margin: 0;
  float: left;
  min-height: 273px;
  _height: 274px;
}

.views-display .tab-section .inside {
  margin: 0.5em 0.5em 0.5em 1em;
}

.views-display .tab-section .inside .views-category {
  padding: 0.25em 0.25em 0.5em 1em;
  margin-bottom: 1em;
  background: #f6f6f6;
  border: 1px #efefef solid;
}

.views-display .tab-section .inside .views-category-title {
  font-size: 9pt;
  font-weight: bold;
}

.views-display .tab-section .links {
  float: right;
  font-size: 6pt;
  position: relative;
  display: inline;
}

.views-display .tab-section .links a {
  font-size: 6pt;
  font-style: italic;
}

.views-display .form-submit,
#views-ajax-pad .form-submit {
  margin: 0;
}

.views-display #views-add-display-form {
  float: right;
  margin-bottom: 0;
  margin-right: 0.5em;
}

.views-display .middle {
  width: 34%;
}

.views-basic-info {
  margin: 0.5em 0em 0 0;
  padding: 0.5em;
  font-weight: bold;
  background-position: 0px -8px;
}

/*
 * AJAX pad, the bottom part where settings are edited.
 */
#views-ajax-pad {
  background: transparent;
  margin-top: 0px;
}

#views-ajax-title {
  background: transparent;
  background-position: 0px -7px;
  margin: 0 0 0 117px;
  padding: 1em 1em 0em 1em;
  border-left: #ADB7BE 1px solid;
  border-right: #ADB7BE 1px solid;
  font-weight: bold;
}

#views-ajax-pad .message {
  margin-left: 117px;
  border: #ADB7BE 1px solid;
  border-top: 0;
  /* padding: 3em 0em; */
  text-align: center;
  background: transparent;
  font-style: italic;
}

#views-ajax-pad form {
  margin-left: 117px;
  border: #ADB7BE 1px solid;
  border-top: 0;
  padding-top: 3px;
}

#views-ajax-pad .views-messages {
  background: transparent;
  margin-left: 117px;
  border-top: 0;
  padding: 5px;
  border-left: #ADB7BE 1px solid;
  border-right: #ADB7BE 1px solid;
}

#views-ajax-pad .form-buttons {
  margin: 0;
  padding: 0.5em 1em;
  background: #efefef;
  clear: left;
}

#views-ajax-pad .clear {
  clear: left;
}

#views-ajax-pad .form-buttons .form-submit {
  margin: 0 .5em 0 0;
  padding: 0;
}

#views-ajax-pad .form-item {
  margin: 0.5em;
  padding: 0em 0.5em;
}

/* These put checkboxes closer together */
#views-ajax-pad .form-checkboxes .form-item,
#views-ajax-pad .form-checkboxes .description,
#views-ajax-pad .form-checkboxes input,
#views-ajax-pad .form-radios .form-item,
#views-ajax-pad .form-radios label,
#views-ajax-pad .form-radios input {
  margin-top: 0;
  margin-bottom: 0;
}

#views-ajax-pad .form-item .form-checkboxes,
#views-ajax-pad .form-checkboxes input,
#views-ajax-pad .form-checkboxes label,
#views-ajax-pad .form-item .form-checkboxes .form-item,
#views-ajax-pad .form-item .form-radios,
#views-ajax-pad .form-radios input,
#views-ajax-pad .form-radios label,
#views-ajax-pad .form-item .form-radios .form-item {
  padding-left: 0;
  margin-left: 0;
}

#views-ajax-pad .form-checkboxes .description,
#views-ajax-pad .form-radios .description {
  margin-left: 2em;
}

#views-ajax-pad {
  display: none;
}

html.js #views-ajax-pad {
  display: block;
}

.views-override,
.views-expose {
  padding: 0.5em 1em 0em 1em;
}

#views-ajax-pad .views-override .form-submit,
#views-ajax-pad .views-expose .form-submit {
  float: right;
  margin: 0 .5em 0 1em;
}

#views-ajax-pad .views-expose .description,
#views-ajax-pad .views-override .description {
  margin-bottom: .25em;
}

/*
 * Some column widths for use within the ajax pad
 */
#views-ajax-pad .views-left-10 {
  float: left;
  width: 10%;
}

#views-ajax-pad .views-left-20 {
  float: left;
  width: 20%;
}

#views-ajax-pad .views-left-25 {
  float: left;
  width: 25%;
}

#views-ajax-pad .views-left-30 {
  float: left;
  width: 30%;
}

#views-ajax-pad .views-left-40 {
  float: left;
  width: 40%;
}

#views-ajax-pad .views-left-50 {
  float: left;
  width: 50%;
}

#views-ajax-pad .views-right-50 {
  float: right;
  width: 50%;
}

#views-ajax-pad .views-left-75 {
  float: left;
  width: 75%;
}

#views-ajax-pad .views-radio-box {
  overflow: auto;
  height: 180px;
}

#views-ajax-pad fieldset {
  margin: 0 .5em;
}

#views-ajax-pad table td .form-item,
#views-ajax-pad table td .form-item input,
#views-ajax-pad table td .form-item select {
  padding: 0;
  margin: 0;
}

/*
 * Add, Rearrange and Configure buttons using sprites
 */
a.views-button-configure,
a.views-button-add,
a.views-button-rearrange,
a.views-button-remove {
	background:transparent url(../images/sprites.png);
	display: inline-block;
	float: right;
	height: 12px;
	width: 16px;
	margin: 2px 0px 1px 0px;
	border: #666 1px solid;
}

a.views-button-remove {
  background-position: 0px -72px;
  position: relative;
  top: -4px;
}
a.views-button-remove:hover {
  background-position: 0px -84px;
}

a.views-button-configure {
  background-position: 0px -48px;
  margin: 0;
}
a.views-button-configure:hover {
  background-position: 0px -60px;
}

a.views-button-add {
  background-position: 0px -24px;
}
a.views-button-add:hover {
  background-position: 0px -36px;
}

a.views-button-rearrange {
  background-position: 0px 0px;
}
a.views-button-rearrange:hover {
  background-position: 0px -12px;
}

a.views-button-remove span,
a.views-button-rearrange span,
a.views-button-configure span,
a.views-button-add span {
  display: none;
}

html.js #arrange thead {
  display: none;
}

html.js .views-remove-checkbox {
  display: none;
}

a.views-button-remove {
  display: none;
}

html.js a.views-button-remove {
  display: inline;
}

#arrange tr.even,
#arrange tr.odd,
#arrange td {
  padding-top: 0;
  padding-bottom: 0;
}

#arrange .form-item {
  padding: 0;
}

div.changed {
  background: #ffe;
  font-weight: bold;
}

div.view-changed {
  display: none;
  float: right;
  font-style: italic;
  color: #f93;
  padding-left: 1em;
}

div.views-tab div.changed a {

}

div.changed div.view-changed {
  display: block;
}

.overridden {
  background: transparent url(/themes/garland/images/menu-leaf.gif) no-repeat left;
  padding-left: 10px;
}

.hilited {
  color: #000;
  font-weight: bold;
  background-color: #ffd;
  padding-left: 10px;
}

#views-ajax-pad fieldset {
  background: transparent;
  padding-left: 10px;
}

#views-ajax-pad pre {
  overflow: auto;
  border: 1px solid #333;
  background-color: #f0f0f0;
  padding: .5em;
}

form#views-add-display-form {
  margin-bottom: 0em;
}

#views-ui-edit-view-form {
  margin: 0 0 0 117px;
  padding: 0 0 0 1em;
}

form#views-ui-preview-form,
#center form#views-ui-preview-form {
  border: 1px solid black;
  margin: 0 0 .5em 0;
  padding: .5em;
}

form#views-ui-preview-form div#preview-display-id-wrapper,
form#views-ui-preview-form div#preview-args-wrapper {
  float: left;
  margin: 0;
  padding: 0 1em 0 0;
}

form#views-ui-preview-form input#preview-submit {
  margin: 1.7em 0 0 0;
}

.view-locked {
  color: red;
  border: 1px solid red;
  padding: 1em;
}

/* Hide by default only with js */
html.js .views-hidden {
  display: none;
}

.views-query-info {
  overflow: auto;
}

.views-quick-links {
  float: right;
}

.views-quick-links li.last {
  padding-right: 0;
}

.views-edit-view .advanced-help-link {
  padding-right: 3px;
}

#views-ajax-title .advanced-help-link {
  position: relative;
  top: 2px;
  padding-right: 3px;
}

